fix layout issue, decimals

--- a/packages/client/src/containers/liquidity-container.scss
+++ b/packages/client/src/containers/liquidity-container.scss
@@ -15,6 +15,7 @@
 
 .liquidity-container {
     width: 450px;
+    height: 750px;
     min-width: 225px;
     // background: radial-gradient(var(--bgDefault), var(--bgPrimary));
     background: #7033e5;
